---------------------------------- 2023-11-17 22:04:10 23.11.17
no todo: sho bgp * auto-summarize
no todo: server http / host * ptmud
no todo: server smtp / ptmud
no todo: generalize dynamic-metric knobs
qc pass: eigrp with pmtud
qc pass: isis with pmtud
qc pass: ospf with pmtud
qc pass: rift with pmtud
---------------------------------- 2023-11-18 12:54:32 23.11.18
no todo: redundancy to have the remote shows and a counter on how many failures observed
---------------------------------- 2023-11-20 21:23:37 23.11.20
qc pass: sdwan with l2tp2 and l2tp3
qc pass: sdwan with l2tp2 and gre
---------------------------------- 2023-11-20 22:17:24 23.11.20
no todo: sdwan to be able to use more encapsulations like l2tp2, l2tp3, gre, or pim ax25 icmp ipcomp
---------------------------------- 2023-11-21 14:15:36 23.11.21
qc pass: p4lang: sdwan over ipv4 with l2tp
qc pass: p4lang: sdwan over ipv6 with l2tp
qc pass: p4lang: sdwan over ipv4 with l2tp3
qc pass: p4lang: sdwan over ipv6 with l2tp3
qc pass: p4lang: sdwan over ipv4 with gre
qc pass: p4lang: sdwan over ipv6 with gre
---------------------------------- 2023-11-21 20:54:46 23.11.21
qc pass: sdwan with l2tp2 and amt
qc pass: sdwan with l2tp2 and gtp
---------------------------------- 2023-11-21 22:19:33 23.11.21
qc pass: p4lang: sdwan over ipv4 with amt
qc pass: p4lang: sdwan over ipv6 with amt
qc pass: p4lang: sdwan over ipv4 with gtp
qc pass: p4lang: sdwan over ipv6 with gtp
---------------------------------- 2023-11-22 14:05:55 23.11.22
no todo: <num> - process id
no todo: 66666 - process id - as asdf
no todo: 1     - process id
no todo: noti#show ipv4 bgp ?
no todo: bgp to have at least show ipv46 bgp 66666 description
no todo: server http xxx to log better the class exceptions as errors
no todo: show whowas from bmp mrt archive
no todo: dlep as rfc8175
---------------------------------- 2023-11-23 18:20:46 23.11.23
qc pass: ethernet trill-mt encapsulation
qc pass: ethernet trill-fgl encapsulation