@@ -48,7 +48,7 @@ public class verCore {
     /**
      * compile day
      */
-    public final static int day = 27;
+    public final static int day = 28;
 
     /**
      * statement of release
