@@ -1,6 +1,6 @@
 url;file;result;test
--;-;-;freeRouter-rare v23.11.27-cur, done by sprscc13@mr.n0b0dy.
--;-;-;2023-11-27 15:51:01, took 00:12:02, with 80 workers, on 3346 cases, 0 failed, 0 traces, 8 retries
+-;-;-;freeRouter-rare v23.11.28-cur, done by sprscc13@mr.n0b0dy.
+-;-;-;2023-11-28 09:02:55, took 00:11:53, with 80 workers, on 3346 cases, 0 failed, 0 traces, 10 retries
 -;-;-;./rtr.bin
 http://sources.freertr.org/cfg/basic01.tst;basic01.tst;success;dummy test
 http://sources.freertr.org/cfg/basic02.tst;basic02.tst;success;interface with slot
