@@ -3346,7 +3346,6 @@ qc pass: tacacs server
 qc pass: udp forwarder server
 todo: generalise server access- knobs
 todo: honeypot to wireformat, decode
-todo: bgp neigh log-end-changes log-pathlen-changes log-route-map/policy/pfxlist-changes etc knob
 todo: image viewer to file manager
 todo: game butterfly hanoy, modem, mdev
 todo: server http to have api for scripts
