@@ -14,8 +14,8 @@
 .bad { color: red }
 </style>
 <title>tester</title></head><body>
-release: freeRouter-rare v23.11.27-cur, done by sprscc13@mr.n0b0dy.<br/>
-tested: 2023-11-27 15:51:01, took 00:12:02, with 80 workers, on 3346 cases, 0 failed, 0 traces, 8 retries<br/>
+release: freeRouter-rare v23.11.28-cur, done by sprscc13@mr.n0b0dy.<br/>
+tested: 2023-11-28 09:02:55, took 00:11:53, with 80 workers, on 3346 cases, 0 failed, 0 traces, 10 retries<br/>
 jvm: ./rtr.bin<br/>
 <br/>
 <table><thead><tr><td><b>file</b></td><td><b>result</b></td><td><b>test</b></td></tr></thead><tbody>
