@@ -1,6 +1,6 @@
 url;file;result;test
--;-;-;freeRouter-rare v23.11.27-cur, done by sprscc13@mr.n0b0dy.
--;-;-;2023-11-27 16:00:23, took 00:09:05, with 60 workers, on 486 cases, 0 failed, 0 traces, 0 retries
+-;-;-;freeRouter-rare v23.11.28-cur, done by sprscc13@mr.n0b0dy.
+-;-;-;2023-11-28 09:10:14, took 00:07:03, with 60 workers, on 486 cases, 0 failed, 0 traces, 0 retries
 -;-;-;./rtr.bin
 http://sources.freertr.org/cfg/p4lang-acl01.tst;p4lang-acl01.tst;success;p4lang: copp
 http://sources.freertr.org/cfg/p4lang-acl02.tst;p4lang-acl02.tst;success;p4lang: ingress access list
