@@ -486,7 +486,6 @@ qc pass: p4lang: sdwan over ipv4 with gtp
 qc pass: p4lang: sdwan over ipv6 with gtp
 todo: generalise server access- knobs
 todo: honeypot to wireformat, decode
-todo: bgp neigh log-end-changes log-pathlen-changes log-route-map/policy/pfxlist-changes etc knob
 todo: image viewer to file manager
 todo: game butterfly hanoy, modem, mdev
 todo: server http to have api for scripts
