@@ -14,8 +14,8 @@
 .bad { color: red }
 </style>
 <title>tester</title></head><body>
-release: freeRouter-rare v23.11.27-cur, done by sprscc13@mr.n0b0dy.<br/>
-tested: 2023-11-27 16:00:23, took 00:09:05, with 60 workers, on 486 cases, 0 failed, 0 traces, 0 retries<br/>
+release: freeRouter-rare v23.11.28-cur, done by sprscc13@mr.n0b0dy.<br/>
+tested: 2023-11-28 09:10:14, took 00:07:03, with 60 workers, on 486 cases, 0 failed, 0 traces, 0 retries<br/>
 jvm: ./rtr.bin<br/>
 <br/>
 <table><thead><tr><td><b>file</b></td><td><b>result</b></td><td><b>test</b></td></tr></thead><tbody>
